...
    <string name="pasoDatosInfo">DatosInfo</string>
    <string name="pasoDatosGasolinera">DatosGasolinera</string>
    <string name="pasoListaGasolinerasFiltros">ListaGasolineras</string>
    <string name="aplicar">Aplicar</string>
    <string name="marca">Marca</string>
    <string name="tipoGasolina">Tipo de Gasolina</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="ok">OK</string>
    <string name="complete_nombre">El campo Nombre es obligatorio</string>
    <string name="complete_marca">La marca se encuentra sin seleccionar</string>
    <string name="complete_descuento">El campo Descuento es obligatorio</string>
    <string name="porcentual">Porcentual</string>
...
